--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,2 +1,2 @@
-  @font-face { font-family: SinhalaAstro; src: url('/fonts/astro11.ttf'); } 
-  @font-face { font-family: FMBindumathi; src: url('/fonts/FMBindumathi.ttf'); } 
+  @font-face { font-family: SinhalaAstro; src: url('/astro11.ttf'); } 
+  @font-face { font-family: FMBindumathi; src: url('/FMBindumathi.ttf'); } 
